gccida/c0/gen_decl
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_decl/src/c-aux-info.c:969:12: error: use of undeclared identifier 'arg0'
ret_val = &arg0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_decl/src/c-aux-info.c:976:14: error: use of undeclared identifier 'arg0'
data_type = &arg0; 
             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_decl/src/obj/c-aux-info.o] Error 1
